--- a/templates/react/components/header/style.scss
+++ b/templates/react/components/header/style.scss
@@ -212,7 +212,7 @@
 		  background: -ms-linear-gradient(top, #F70D1A 0, #F70D1A 100%);
 		  background: linear-gradient(to bottom, #F70D1A 0, #F70D1A 100%);
 		  a:hover {
-			border-bottom: 4px solid #000;
+			border-bottom: 4px solid #b10610;
 		  }
 		}
 		&:nth-child(6) {
@@ -248,7 +248,7 @@
 		  background: -ms-linear-gradient(top, #F70D1A 0, #F70D1A 100%);
 		  background: linear-gradient(to bottom, #F70D1A 0, #F70D1A 100%);
 		  a:hover {
-			border-bottom: 4px solid #000;
+			border-bottom: 4px solid #b10610;
 		  }
 		}
 		&:nth-child(8) {
