--- a/templates/react/components/filters/style.css
+++ b/templates/react/components/filters/style.css
@@ -1,9 +1,14 @@
 .filters ul li {
-  display: inline-block; }
+  display: inline-block;
+  margin-right: 5px; }
   .filters ul li a {
     display: block;
-    padding: 20px 20px 20px 0px;
+    padding: 5px 10px;
     font-size: 18px;
-    color: #4168ff; }
+    color: #4168ff;
+    border-radius: 4px; }
+  .filters ul li.active a {
+    background: #416dff;
+    color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
