--- a/templates/react/containers/productPage/style.scss
+++ b/templates/react/containers/productPage/style.scss
@@ -19,6 +19,11 @@
 		  font-size: 30px;
 		  margin-bottom: 12px;
 		}
+		.product-actions{
+		  .save-btn{
+			margin-left: 5px;
+		  }
+		}
 		.share{
 		  margin-top: 10px;
 		  ul{
