--- a/templates/react/components/header/style.scss
+++ b/templates/react/components/header/style.scss
@@ -357,5 +357,11 @@
   .header .header-nav ul li .dropdown-menu{
 	left:-70px;
   }
+  .header .header-top .content .actions{
+	top:7px;
+  }
+  .header .header-top .content .actions a{
+	display: block;
+  }
 }
 /* /responsiveness */
