--- a/templates/react/components/priceRange/style.css
+++ b/templates/react/components/priceRange/style.css
@@ -1,3 +1,36 @@
 @import url(../../../../node_modules/bootstrap-slider/dist/css/bootstrap-slider.css);
+/*fonts*/
+/*colors*/
+/*text*/
+/*backgrounds*/
+/*border*/
+/*social*/
+.sorting {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 15px 30px 15px; }
+  .sorting .price-range-slider .slider.slider-horizontal {
+    width: 400px; }
+  .sorting .price-range-slider .slider .slider-handle {
+    top: -3px;
+    height: 25px;
+    background-image: linear-gradient(to bottom, #77b353 0%, #77b353 100%); }
+    .sorting .price-range-slider .slider .slider-handle.round {
+      border-radius: 0; }
+  .sorting .price-range-slider .slider .slider-selection {
+    background-image: linear-gradient(to bottom, #cb1d00 0%, #cb1d00 100%); }
+  .sorting .selectpicker {
+    border: 1px solid #e9e9e9; }
+
+/* responsiveness */
+@media (max-width: 768px) {
+  .sorting {
+    display: block;
+    text-align: right; }
+    .sorting .price-range-slider {
+      margin-bottom: 20px; }
+      .sorting .price-range-slider .slider.slider-horizontal {
+        width: 100%; } }
+/* /responsiveness */
 
 /*# sourceMappingURL=style.css.map */
