--- a/templates/react/components/priceRange/style.scss
+++ b/templates/react/components/priceRange/style.scss
@@ -1,2 +1,44 @@
 @import "../../../../node_modules/bootstrap-slider/dist/css/bootstrap-slider.css";
+@import '../../../../public/styles/variables.scss';
 
+.sorting{
+  display: flex;
+  justify-content: space-between;
+  padding:15px 15px 30px 15px;
+  .price-range-slider{
+	.slider{
+	  &.slider-horizontal{
+		width:400px;
+	  }
+	  .slider-handle{
+		top:-3px;
+		height:25px;
+		background-image: linear-gradient(to bottom, $primary-color 0%, $primary-color 100%);
+		&.round{
+		  border-radius: 0;
+		}
+	  }
+	  .slider-selection{
+		background-image: linear-gradient(to bottom, $brand-red 0%, $brand-red 100%);
+	  }
+	}
+  }
+  .selectpicker{
+	border:1px solid $border-color;
+  }
+}
+/* responsiveness */
+@media (max-width: 768px) {
+  .sorting {
+	display:block;
+	text-align: right;
+	.price-range-slider{
+	  margin-bottom: 20px;
+	  .slider.slider-horizontal {
+		width: 100%;
+	  }
+	}
+  }
+}
+
+/* /responsiveness */
