--- a/templates/react/containers/app/style.css
+++ b/templates/react/containers/app/style.css
@@ -61,6 +61,31 @@
     text-shadow: none;
     padding: 6px 12px;
     font-size: 14px; }
+  .app .contact-us-btn {
+    color: #fff;
+    background-color: #a54343;
+    display: block;
+    line-height: 45px;
+    height: 50px;
+    font-size: 18px;
+    padding: 1px 15px;
+    margin-right: -35px;
+    -webkit-transition: all .15s ease-in-out;
+    -moz-transition: all .15s ease-in-out;
+    transition: all .15s ease-in-out;
+    font-weight: 400;
+    margin-bottom: -5px;
+    box-shadow: -1px -1px 5px rgba(0, 0, 0, 0.3);
+    position: fixed;
+    bottom: 0px;
+    right: 100px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px; }
+    .app .contact-us-btn:hover {
+      text-decoration: none;
+      margin-bottom: 0; }
+    .app .contact-us-btn .icon {
+      margin-right: 5px; }
 
 /* responsiveness */
 @media (min-width: 1500px) {
@@ -70,6 +95,9 @@
 @media (max-width: 1024px) {
   .app .container {
     width: 100%; } }
+@media (max-width: 762px) {
+  .app .contact-us-btn {
+    display: none; } }
 /* /responsiveness */
 
 /*# sourceMappingURL=style.css.map */
