--- a/templates/react/containers/app/style.scss
+++ b/templates/react/containers/app/style.scss
@@ -43,7 +43,7 @@
 	color: $brand-white;
 	background-color: $primary-color;
 	border-color: $primary-color;
-	&:hover{
+	&:hover {
 	  background-color: $dark-primary-color;
 	  border-color: $dark-primary-color;
 	}
@@ -52,7 +52,7 @@
 	color: $brand-white;
 	background-color: $brand-red;
 	border-color: $brand-red;
-	&:hover{
+	&:hover {
 	  background-color: $dark-brand-red;
 	  border-color: $dark-brand-red;
 	}
@@ -73,7 +73,7 @@
 	  font-size: 14px;
 	}
   }
-  .contact-us-btn{
+  .contact-us-btn {
 	color: #fff;
 	background-color: #a54343;
 	display: block;
@@ -87,19 +87,33 @@
 	transition: all .15s ease-in-out;
 	font-weight: 400;
 	margin-bottom: -5px;
-	box-shadow: -1px -1px 5px rgba(0,0,0,.3);
-	position:fixed;
-	bottom:0px;
-	right:100px;
+	box-shadow: -1px -1px 5px rgba(0, 0, 0, .3);
+	position: fixed;
+	bottom: 0px;
+	right: 100px;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 	&:hover {
 	  text-decoration: none;
 	  margin-bottom: 0;
 	}
-	.icon{
+	.icon {
 	  margin-right: 5px;
 	}
+  }
+  .pagination-box {
+	text-align: right;
+  }
+  .pagination > li > a, .pagination > li > span{
+	color: #77b253;
+  }
+  .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus {
+	background-color: #77b253;
+	border-color: #77b253;
+  }
+  .empty-msg{
+	text-align: center;
+	color:#d8d8d8;
   }
 }
 
@@ -122,7 +136,7 @@
 }
 
 @media (max-width: 762px) {
-  .app .contact-us-btn{
+  .app .contact-us-btn {
 	display: none;
   }
 }
