--- a/templates/react/components/filters/style.scss
+++ b/templates/react/components/filters/style.scss
@@ -1,8 +1,10 @@
 .filters{
   ul{
+	padding-left: 4px;
 	li{
 	  display: inline-block;
 	  margin-right: 5px;
+	  
 	  a{
 		display: block;
 		padding:5px 10px;
