--- a/templates/react/components/header/style.css
+++ b/templates/react/components/header/style.css
@@ -289,10 +289,7 @@
     left: -70px; }
 
   .header .header-top .content .actions {
-    top: 7px; }
-
-  .header .header-top .content .actions a {
-    display: block; } }
+    top: px; } }
 /* /responsiveness */
 
 /*# sourceMappingURL=style.css.map */
