--- a/templates/react/components/header/style.scss
+++ b/templates/react/components/header/style.scss
@@ -358,10 +358,10 @@
 	left:-70px;
   }
   .header .header-top .content .actions{
-	top:7px;
+	top:23px;
   }
   .header .header-top .content .actions a{
-	display: block;
+	//display: block;
   }
 }
 /* /responsiveness */
