--- a/templates/react/containers/productGroup/style.scss
+++ b/templates/react/containers/productGroup/style.scss
@@ -35,6 +35,7 @@
 	  }
 	  .category-wise{
 		.category-title{
+		  text-align: center;
 		  font-size:25px;
 		  font-weight: bold;
 		  margin-bottom: 10px;
