--- a/templates/react/containers/card/style.scss
+++ b/templates/react/containers/card/style.scss
@@ -15,6 +15,9 @@
 	  white-space: nowrap;
 	  overflow: hidden;
 	  text-overflow: ellipsis;
+	  &:hover{
+		color: #77b353;
+	  }
 	}
   }
   .card-body {
@@ -86,7 +89,7 @@
 	  .checkout-btn{
 		display: block;
 		margin-top: -20px;
-		margin-bottom: 2px;
+		margin-bottom: 4px;
 	  }
 	}
   }
