--- a/templates/react/containers/productGroup/style.css
+++ b/templates/react/containers/productGroup/style.css
@@ -26,6 +26,7 @@
         font-weight: normal;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
   .product-group .container .column .category-wise .category-title {
+    text-align: center;
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 10px; }
