--- a/templates/react/containers/productGroup/style.css
+++ b/templates/react/containers/productGroup/style.css
@@ -5,43 +5,43 @@
 /*border*/
 /*social*/
 .product-group {
-  padding-top: 70px; }
-  .product-group .container .column .categories {
+  padding-top: 20px; }
+  .product-group .column .categories {
     border-right: 1px solid #e9e9e9;
     padding-left: 60px; }
-    .product-group .container .column .categories ul li {
+    .product-group .column .categories ul li {
       list-style: none; }
-      .product-group .container .column .categories ul li a {
+      .product-group .column .categories ul li a {
         display: block;
         padding: 10px 20px 10px 20px;
         font-size: 16px;
         font-weight: bold;
         color: #333; }
-        .product-group .container .column .categories ul li a:hover {
+        .product-group .column .categories ul li a:hover {
           color: #77b353; }
-        .product-group .container .column .categories ul li a.selected {
+        .product-group .column .categories ul li a.selected {
           color: #77b353; }
-      .product-group .container .column .categories ul li .sub-categories a {
+      .product-group .column .categories ul li .sub-categories a {
         padding: 10px 10px 10px 30px;
         font-weight: normal;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
-  .product-group .container .column .category-wise .category-title {
+  .product-group .column .category-wise .category-title {
     text-align: center;
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 10px; }
-  .product-group .container .column .category-wise .category-description {
+  .product-group .column .category-wise .category-description {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 12px;
     line-height: 30px;
     padding-bottom: 20px;
     margin-bottom: 20px;
     border-bottom: 1px solid #e9e9e9; }
-  .product-group .container .column .category-wise .products .container {
+  .product-group .column .category-wise .products .container {
     width: 100%; }
-    .product-group .container .column .category-wise .products .container .card .card-header .product-title {
+    .product-group .column .category-wise .products .container .card .card-header .product-title {
       font-size: 15px; }
-    .product-group .container .column .category-wise .products .container .card .card-body .product-image .image {
+    .product-group .column .category-wise .products .container .card .card-body .product-image .image {
       height: 200px; }
 
 /* responsiveness */
