--- a/templates/react/containers/productGroup/style.css
+++ b/templates/react/containers/productGroup/style.css
@@ -29,7 +29,7 @@
     text-align: center;
     font-size: 25px;
     font-weight: bold;
-    margin-bottom: 10px; }
+    margin-t: 10px; }
   .product-group .column .category-wise .category-description {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 12px;
