--- a/templates/react/containers/productGroup/style.scss
+++ b/templates/react/containers/productGroup/style.scss
@@ -38,7 +38,7 @@
 		  text-align: center;
 		  font-size:25px;
 		  font-weight: bold;
-		  margin-bottom: 10px;
+		  margin-top: 10px;
 		}
 		.category-description{
 		  font-family: $helvetica-font;
