--- a/templates/react/components/carousel/style.css
+++ b/templates/react/components/carousel/style.css
@@ -19,10 +19,12 @@
     z-index: 1; }
   .carousel .carousel-indicators {
     position: inherit;
-    margin: auto;
-    left: initial;
+    left: 0;
+    margin-left: 0;
     z-index: 0;
-    top: 10px; }
+    top: 10px;
+    width: 100%;
+    text-align: left; }
     .carousel .carousel-indicators li {
       width: 50px;
       height: 50px;
