--- a/templates/react/components/carousel/style.scss
+++ b/templates/react/components/carousel/style.scss
@@ -23,10 +23,12 @@
   }
   .carousel-indicators {
 	position: inherit;
-	margin:auto;
-	left:initial;
+	left:0;
+	margin-left: 0;
 	z-index: 0;
 	top:10px;
+	width: 100%;
+	text-align: left;
 	li {
 	  width: 50px;
 	  height: 50px;
