--- a/templates/react/components/footer/style.css
+++ b/templates/react/components/footer/style.css
@@ -5,33 +5,43 @@
 /*border*/
 /*social*/
 .footer {
-  padding: 50px;
+  padding: 40px 0px 0px 0px;
   margin-top: 100px;
-  background-color: #f7f7f7; }
-  .footer .title {
-    font-size: 18px;
-    margin-bottom: 14px;
-    font-weight: 700; }
-  .footer .links ul li {
-    list-style: none; }
-    .footer .links ul li a {
+  background-color: #f7f7f7;
+  text-align: center; }
+  .footer ul li {
+    list-style: none;
+    display: inline-block;
+    margin-right: 10px; }
+    .footer ul li a {
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 14px;
       color: #333;
       line-height: 28px; }
-      .footer .links ul li a:hover {
+      .footer ul li a:hover {
         color: #77b353; }
+  .footer .social a {
+    font-size: 30px; }
+    .footer .social a.facebook:hover {
+      color: #3c5a98; }
+    .footer .social a.twitter:hover {
+      color: #1ea1f2; }
+    .footer .social a.pinterest:hover {
+      color: #bc0718; }
+  .footer .copyright {
+    font-size: 12px;
+    font-weight: 200;
+    padding: 10px;
+    margin-top: 30px;
+    background: #77b253;
+    color: #fff;
+    letter-spacing: 1px; }
 
 /* responsiveness */
 @media (max-width: 520px) {
-  .footer {
-    padding: 20px 5px;
-    text-align: center; }
-    .footer .title {
-      font-size: 15px; }
-    .footer .column {
-      padding: 0px;
-      margin-bottom: 10px; } }
+  .footer .column {
+    padding: 0px;
+    margin-bottom: 10px; } }
 /* /responsiveness */
 
 /*# sourceMappingURL=style.css.map */
