--- a/templates/react/components/footer/style.scss
+++ b/templates/react/components/footer/style.scss
@@ -1,42 +1,63 @@
 @import '../../../../public/styles/variables.scss';
 
-.footer{
-  padding:50px;
-  margin-top:100px;
+.footer {
+  padding: 40px 0px 0px 0px;
+  margin-top: 100px;
   background-color: $light-bg;
-  .title {
-	font-size: 18px;
-	margin-bottom: 14px;
-	font-weight: 700;
-  }
-  .links{
-	ul{
-	  li{
-		list-style: none;
-		a{
-		  font-family: $helvetica-font;
-		  font-size: 14px;
-		  color:$brand-black;
-		  line-height: 28px;
-		  &:hover{
-			color:$primary-color;
-		  }
+  text-align: center;
+  ul {
+	li {
+	  list-style: none;
+	  display: inline-block;
+	  margin-right: 10px;
+	  a {
+		font-family: $helvetica-font;
+		font-size: 14px;
+		color: $brand-black;
+		line-height: 28px;
+		&:hover {
+		  color: $primary-color;
 		}
 	  }
 	}
   }
+  .social{
+	a{
+	  font-size: 30px;
+	  &.facebook{
+		&:hover{
+		  color:$facebook-color;
+		}
+	  }
+	  &.twitter{
+		&:hover{
+		  color:$twitter-color;
+		}
+	  }
+	  &.pinterest{
+		&:hover{
+		  color:$pinterest-color;
+		}
+	  }
+	}
+  }
+  .copyright{
+	font-size: 12px;
+	font-weight: 200;
+	padding: 10px;
+	margin-top: 30px;
+	background: #77b253;
+	color:#fff;
+	letter-spacing: 1px;
+  }
 }
+
 /* responsiveness */
 @media (max-width: 520px) {
-  .footer{
-	padding:20px 5px;
-	text-align: center;
-	.title {
-	  font-size: 15px;
-	}
-	.column{
-	  padding:0px;
-	  margin-bottom:10px;
+  .footer {
+	.column {
+	  padding: 0px;
+	  margin-bottom: 10px;
 	}
   }
 }
