--- a/templates/react/containers/app/style.scss
+++ b/templates/react/containers/app/style.scss
@@ -125,6 +125,9 @@
   .app .main-container {
 	width: 1500px;
 	margin: 123px auto auto auto;
+	&.contact-us-container{
+	  width:100%;
+	}
   }
 }
 
