--- a/templates/react/components/footer/style.css
+++ b/templates/react/components/footer/style.css
@@ -33,8 +33,7 @@
     font-weight: 200;
     padding: 10px;
     margin-top: 30px;
-    background: #77b253;
-    color: #fff;
+    border-top: 1px solid #e9e9e9;
     letter-spacing: 1px; }
 
 /* responsiveness */
