--- a/templates/react/components/footer/style.scss
+++ b/templates/react/components/footer/style.scss
@@ -46,8 +46,7 @@
 	font-weight: 200;
 	padding: 10px;
 	margin-top: 30px;
-	background: #77b253;
-	color:#fff;
+	border-top:1px solid $border-color;
 	letter-spacing: 1px;
   }
 }
