--- a/templates/react/containers/home/style.scss
+++ b/templates/react/containers/home/style.scss
@@ -5,6 +5,16 @@
 	  padding: 0px;
 	  .container {
 		width: 100%;
+		padding:0;
+		.row{
+		  .col-md-4{
+			padding-left: 10px;
+			padding-right: 10px;
+		  }
+		}
+		&.filters{
+		  padding:30px 0px 20px 6px;
+		}
 	  }
 	  .banner {
 		margin: 10px;
