--- a/templates/react/containers/productGroup/style.css
+++ b/templates/react/containers/productGroup/style.css
@@ -4,47 +4,73 @@
 /*backgrounds*/
 /*border*/
 /*social*/
-.product-group {
-  padding-top: 20px; }
-  .product-group .column .categories {
-    border-right: 1px solid #e9e9e9;
-    padding-left: 60px; }
-    .product-group .column .categories ul li {
-      list-style: none; }
-      .product-group .column .categories ul li a {
-        display: block;
-        padding: 10px 20px 10px 20px;
-        font-size: 16px;
-        font-weight: bold;
-        color: #333; }
-        .product-group .column .categories ul li a:hover {
-          color: #77b353; }
-        .product-group .column .categories ul li a.selected {
-          color: #77b353; }
-      .product-group .column .categories ul li .sub-categories a {
-        padding: 10px 10px 10px 30px;
-        font-weight: normal;
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
-  .product-group .column .category-wise .category-title {
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
-    margin-t: 10px; }
-  .product-group .column .category-wise .category-description {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 12px;
-    line-height: 30px;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #e9e9e9; }
-  .product-group .column .category-wise .products .container {
-    width: 100%; }
-    .product-group .column .category-wise .products .container .card .card-header .product-title {
-      font-size: 15px; }
-    .product-group .column .category-wise .products .container .card .card-body .product-image .image {
-      height: 200px; }
+.product-group .row {
+  margin: 0px; }
+  .product-group .row .column {
+    padding: 0px; }
+    .product-group .row .column .container {
+      width: 100%; }
+    .product-group .row .column .banner {
+      margin: 10px; }
+    .product-group .row .column.left .banner {
+      margin-right: 0px;
+      position: fixed;
+      width: 16%; }
+    .product-group .row .column.right .banner {
+      margin-left: 0px;
+      position: fixed;
+      width: 16%; }
+    .product-group .row .column .categories {
+      border-right: 1px solid #e9e9e9;
+      padding-left: 60px; }
+      .product-group .row .column .categories ul li {
+        list-style: none; }
+        .product-group .row .column .categories ul li a {
+          display: block;
+          padding: 10px 20px 10px 20px;
+          font-size: 16px;
+          font-weight: bold;
+          color: #333; }
+          .product-group .row .column .categories ul li a:hover {
+            color: #77b353; }
+          .product-group .row .column .categories ul li a.selected {
+            color: #77b353; }
+        .product-group .row .column .categories ul li .sub-categories a {
+          padding: 10px 10px 10px 30px;
+          font-weight: normal;
+          font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+    .product-group .row .column .category-wise .category-title {
+      text-align: center;
+      font-size: 25px;
+      font-weight: bold;
+      margin-top: 10px; }
+    .product-group .row .column .category-wise .category-description {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 12px;
+      line-height: 30px;
+      padding-bottom: 20px;
+      margin-bottom: 20px;
+      border-bottom: 1px solid #e9e9e9; }
+    .product-group .row .column .category-wise .products .container {
+      width: 100%; }
+      .product-group .row .column .category-wise .products .container .card .card-header .product-title {
+        font-size: 15px; }
+      .product-group .row .column .category-wise .products .container .card .card-body .product-image .image {
+        height: 200px; }
 
 /* responsiveness */
+@media (min-width: 1500px) {
+  .product-group .row .column.left .banner {
+    width: 230px; }
+
+  .product-group .row .column.right .banner {
+    width: 230px; } }
+@media (max-width: 1200px) {
+  .product-group .row .column.left {
+    display: none; }
+
+  .product-group .row .column.right {
+    display: none; } }
 @media (max-width: 992px) {
   .product-group .container .column .categories {
     display: none; } }
