--- a/templates/react/containers/productGroup/style.scss
+++ b/templates/react/containers/productGroup/style.scss
@@ -1,31 +1,53 @@
 @import '../../../../public/styles/variables';
 
-.product-group{
-  padding-top:20px;
+.product-group {
   //.container{
-	.column{
-	  .categories{
-		border-right:1px solid $border-color;
-		padding-left:60px;
-		ul{
-		  li{
+  .row {
+	margin: 0px;
+	.column {
+	  padding: 0px;
+	  .container {
+		width: 100%;
+	  }
+	  .banner {
+		margin: 10px;
+	  }
+	  &.left {
+		.banner {
+		  margin-right: 0px;
+		  position: fixed;
+		  width: 16%;
+		}
+	  }
+	  &.right {
+		.banner {
+		  margin-left: 0px;
+		  position: fixed;
+		  width: 16%;
+		}
+	  }
+	  .categories {
+		border-right: 1px solid $border-color;
+		padding-left: 60px;
+		ul {
+		  li {
 			list-style: none;
-			a{
-			  display:block;
-			  padding:10px 20px 10px 20px;
-			  font-size:16px;
+			a {
+			  display: block;
+			  padding: 10px 20px 10px 20px;
+			  font-size: 16px;
 			  font-weight: bold;
-			  color:$brand-black;
-			  &:hover{
-				color:$primary-color;
+			  color: $brand-black;
+			  &:hover {
+				color: $primary-color;
 			  }
-			  &.selected{
-				color:$primary-color;
+			  &.selected {
+				color: $primary-color;
 			  }
 			}
-			.sub-categories{
-			  a{
-				padding:10px 10px 10px 30px;
+			.sub-categories {
+			  a {
+				padding: 10px 10px 10px 30px;
 				font-weight: normal;
 				font-family: $helvetica-font;
 			  }
@@ -33,37 +55,37 @@
 		  }
 		}
 	  }
-	  .category-wise{
-		.category-title{
+	  .category-wise {
+		.category-title {
 		  text-align: center;
-		  font-size:25px;
+		  font-size: 25px;
 		  font-weight: bold;
 		  margin-top: 10px;
 		}
-		.category-description{
+		.category-description {
 		  font-family: $helvetica-font;
 		  font-size: 12px;
 		  line-height: 30px;
 		  padding-bottom: 20px;
-		  margin-bottom:20px;
-		  border-bottom:1px solid $border-color;
+		  margin-bottom: 20px;
+		  border-bottom: 1px solid $border-color;
 		}
-		.price-range{
-		  
+		.price-range {
+
 		}
-		.products{
-		  .container{
-			width:100%;
-			.card{
-			  .card-header{
-				.product-title{
+		.products {
+		  .container {
+			width: 100%;
+			.card {
+			  .card-header {
+				.product-title {
 				  font-size: 15px;
 				}
 			  }
-			  .card-body{
-				.product-image{
-				  .image{
-					height:200px;
+			  .card-body {
+				.product-image {
+				  .image {
+					height: 200px;
 				  }
 				}
 			  }
@@ -72,13 +94,36 @@
 		}
 	  }
 	}
+  }
   //}
 }
+
 /* responsiveness */
-@media (max-width: 992px) {
-  .product-group .container .column .categories{
+@media (min-width: 1500px) {
+  .product-group  .row .column.left .banner{
+	width:230px;
+  }
+  .product-group  .row .column.right .banner{
+	width:230px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .product-group  .row .column.left{
+	display: none;
+  }
+  .product-group  .row .column.right{
 	display: none;
   }
 }
 
+@media (max-width: 992px) {
+  .product-group .container .column .categories {
+	display: none;
+  }
+}
+
+@media (max-width: 520px) {
+
+}
 /* /responsiveness */
