--- a/templates/react/containers/productGroup/style.css
+++ b/templates/react/containers/productGroup/style.css
@@ -52,7 +52,11 @@
       margin-bottom: 20px;
       border-bottom: 1px solid #e9e9e9; }
     .product-group .row .column .category-wise .products .container {
-      width: 100%; }
+      width: 100%;
+      padding: 0; }
+      .product-group .row .column .category-wise .products .container .row .col-md-4 {
+        padding-left: 10px;
+        padding-right: 10px; }
       .product-group .row .column .category-wise .products .container .card .card-header .product-title {
         font-size: 15px; }
       .product-group .row .column .category-wise .products .container .card .card-body .product-image .image {
