--- a/templates/react/containers/productGroup/style.scss
+++ b/templates/react/containers/productGroup/style.scss
@@ -76,6 +76,13 @@
 		.products {
 		  .container {
 			width: 100%;
+			padding:0;
+			.row{
+			  .col-md-4{
+				padding-left: 10px;
+				padding-right: 10px;
+			  }
+			}
 			.card {
 			  .card-header {
 				.product-title {
