--- a/templates/react/containers/productPage/style.css
+++ b/templates/react/containers/productPage/style.css
@@ -4,10 +4,34 @@
 /*backgrounds*/
 /*border*/
 /*social*/
-.product-page {
-  padding-top: 70px; }
-  .product-page .product {
-    margin-bottom: 100px; }
+.product-page .row {
+  margin: 0px; }
+  .product-page .row .column {
+    padding: 0px; }
+    .product-page .row .column .container {
+      width: 100%;
+      padding: 0; }
+      .product-page .row .column .container .row .col-md-4 {
+        padding-left: 10px;
+        padding-right: 10px; }
+      .product-page .row .column .container.filters {
+        padding: 30px 0px 20px 6px; }
+    .product-page .row .column .banner {
+      margin: 10px; }
+    .product-page .row .column.left .banner {
+      margin-right: 0px;
+      position: fixed;
+      width: 16%; }
+    .product-page .row .column.right .banner {
+      margin-left: 0px;
+      position: fixed;
+      width: 16%; }
+.product-page .more-text {
+  padding: 20px 10px; }
+.product-page .product {
+  margin: 10px; }
+  .product-page .product .column .product-details {
+    padding-left: 10px; }
     .product-page .product .column .product-details .product-title {
       font-size: 30px;
       margin-bottom: 8px; }
@@ -33,26 +57,19 @@
             color: #1ea1f2; }
           .product-page .product .column .product-details .share ul li a.pinterest {
             color: #bc0718; }
-  .product-page .more .row {
-    margin: 0px; }
-    .product-page .more .row .column .more-text {
-      font-size: 16px;
-      padding: 0px 0px 40px 30px; }
-    .product-page .more .row .column .container {
-      width: 100%; }
-    .product-page .more .row .column .banner {
-      margin: 27px 10px 10px 10px; }
-    .product-page .more .row .column.left .banner {
-      margin-right: 0px; }
-    .product-page .more .row .column.right .banner {
-      margin-left: 0px; }
 
 /* responsiveness */
+@media (min-width: 1500px) {
+  .product-page .row .column.left .banner {
+    width: 230px; }
+
+  .product-page .row .column.right .banner {
+    width: 230px; } }
 @media (max-width: 1200px) {
-  .more .row .column.left {
+  .product-page .row .column.left {
     display: none; }
 
-  .more .row .column.right {
+  .product-page .row .column.right {
     display: none; } }
 @media (max-width: 992px) {
   .product-page {
