--- a/templates/react/containers/productPage/style.scss
+++ b/templates/react/containers/productPage/style.scss
@@ -1,11 +1,50 @@
 @import '../../../../public/styles/variables';
 
 .product-page {
-  padding-top: 70px;
+  .row {
+	margin: 0px;
+	.column {
+	  padding: 0px;
+	  .container {
+		width: 100%;
+		padding: 0;
+		.row {
+		  .col-md-4 {
+			padding-left: 10px;
+			padding-right: 10px;
+		  }
+		}
+		&.filters {
+		  padding: 30px 0px 20px 6px;
+		}
+	  }
+	  .banner {
+		margin: 10px;
+	  }
+	  &.left {
+		.banner {
+		  margin-right: 0px;
+		  position: fixed;
+		  width: 16%;
+		}
+	  }
+	  &.right {
+		.banner {
+		  margin-left: 0px;
+		  position: fixed;
+		  width: 16%;
+		}
+	  }
+	}
+  }
+  .more-text{
+	padding:20px 10px;
+  }
   .product {
-	margin-bottom:100px;
+	margin: 10px;
 	.column {
 	  .product-details {
+		padding-left:10px;
 		.product-title {
 		  font-size: 30px;
 		  margin-bottom: 8px;
@@ -19,27 +58,27 @@
 		  font-size: 30px;
 		  margin-bottom: 12px;
 		}
-		.product-actions{
-		  .save-btn{
+		.product-actions {
+		  .save-btn {
 			margin-left: 5px;
 		  }
 		}
-		.share{
+		.share {
 		  margin-top: 10px;
-		  ul{
-			li{
+		  ul {
+			li {
 			  display: inline-block;
 			  margin-right: 8px;
-			  a{
-				font-size:35px;
-				&.facebook{
-				  color:$facebook-color;
+			  a {
+				font-size: 35px;
+				&.facebook {
+				  color: $facebook-color;
 				}
-				&.twitter{
-				  color:$twitter-color;
+				&.twitter {
+				  color: $twitter-color;
 				}
-				&.pinterest{
-				  color:$pinterest-color;
+				&.pinterest {
+				  color: $pinterest-color;
 				}
 			  }
 			}
@@ -48,57 +87,42 @@
 	  }
 	}
   }
-  .more {
-	.row {
-	  margin: 0px;
-	  .column {
-		.more-text{
-		  font-size: 16px;
-		  padding: 0px 0px 40px 30px;
-		}
-		.container {
-		  width: 100%;
-		}
-		.banner {
-		  margin: 27px 10px 10px 10px;
-		}
-		&.left {
-		  .banner {
-			margin-right: 0px;
-		  }
-		}
-		&.right {
-		  .banner {
-			margin-left: 0px;
-		  }
-		}
-	  }
-	}
+}
+
+/* responsiveness */
+@media (min-width: 1500px) {
+  .product-page .row .column.left .banner{
+	width:230px;
+  }
+  .product-page .row .column.right .banner{
+	width:230px;
   }
 }
-/* responsiveness */
 
 @media (max-width: 1200px) {
-  .more .row .column.left{
+  .product-page .row .column.left{
 	display: none;
   }
-  .more .row .column.right{
+  .product-page .row .column.right{
 	display: none;
   }
 }
 
 @media (max-width: 992px) {
-  .product-page{
-	padding-top:0px;
-	.product{
-	  .column{
-		padding:20px;
-		.carousel-indicators{
-		  width:inherit;
+  .product-page {
+	padding-top: 0px;
+	.product {
+	  .column {
+		padding: 20px;
+		.carousel-indicators {
+		  width: inherit;
 		}
 	  }
 	}
   }
 }
 
+@media (max-width: 520px) {
+
+}
 /* /responsiveness */
