--- a/templates/react/components/priceRange/style.scss
+++ b/templates/react/components/priceRange/style.scss
@@ -1,39 +1,64 @@
 @import "../../../../node_modules/bootstrap-slider/dist/css/bootstrap-slider.css";
 @import '../../../../public/styles/variables.scss';
 
-.sorting{
+.sorting {
   display: flex;
   justify-content: space-between;
-  padding:15px 30px 30px 15px;
-  .price-range-slider{
+  padding: 15px 30px 30px 15px;
+  .price-range-slider {
 	padding-left: 23px;
-	.slider{
-	  &.slider-horizontal{
-		width:400px;
+	.slider {
+	  &.slider-horizontal {
+		width: 300px;
 	  }
-	  .slider-handle{
-		top:-3px;
-		height:25px;
+	  .slider-handle {
+		top: -3px;
+		height: 25px;
 		background-image: linear-gradient(to bottom, $primary-color 0%, $primary-color 100%);
-		&.round{
+		&.round {
 		  border-radius: 0;
 		}
 	  }
-	  .slider-selection{
+	  .slider-selection {
 		background-image: linear-gradient(to bottom, $brand-red 0%, $brand-red 100%);
 	  }
 	}
   }
-  .selectpicker{
-	border:1px solid $border-color;
+  .selectpicker {
+	border: 1px solid $border-color;
+  }
+  .navigation {
+	margin-top:-6px;
+	ul {
+	  padding-left: 4px;
+	  li {
+		display: inline-block;
+		margin-right: 5px;
+
+		a {
+		  display: block;
+		  padding: 5px 10px;
+		  font-size: 14px;
+		  color: rgb(65, 104, 255);
+		  border-radius: 4px;
+		}
+		&.active {
+		  a {
+			background: #416dff;
+			color: #fff;
+		  }
+		}
+	  }
+	}
   }
 }
+
 /* responsiveness */
 @media (max-width: 768px) {
   .sorting {
-	display:block;
+	display: block;
 	text-align: right;
-	.price-range-slider{
+	.price-range-slider {
 	  margin-bottom: 20px;
 	  .slider.slider-horizontal {
 		width: 100%;
