--- a/templates/react/components/wishlist/style.scss
+++ b/templates/react/components/wishlist/style.scss
@@ -6,10 +6,13 @@
 	overflow: hidden;
 	margin-bottom: 80px;
 	.title{
-	  //float:left;
 	  font-size: 32px;
-	  margin-right:10px;
 	  text-align: center;
+	  background: linear-gradient(to bottom, #DC381F 0, #DC381F 100%);
+	  color: #FFFFFF;
+	  width: 200px;
+	  margin: auto;
+	  border-radius: 6px;
 	}
 	.share{
 	  float:right;
