--- a/templates/react/containers/app/style.css
+++ b/templates/react/containers/app/style.css
@@ -25,7 +25,7 @@
     resize: none;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
   .app .main-container {
-    margin-top: 123px; }
+    margin-top: 150px; }
   .app .content-center {
     -ms-flex-pack: center;
     justify-content: center;
@@ -87,7 +87,7 @@
     .app .contact-us-btn .icon {
       margin-right: 5px; }
   .app .pagination-box {
-    text-align: right; }
+    text-align: center; }
   .app .pagination > li > a, .app .pagination > li > span {
     color: #77b253; }
   .app .pagination > li.active > a, .app .pagination > li > span {
@@ -106,6 +106,8 @@
     top: 97px; }
   .app .tooltip {
     z-index: 5; }
+  .app .at-share-btn.at-svc-link {
+    background: linear-gradient(to bottom, #E8A317 0, #E8A317 100%) !important; }
 
 /* responsiveness */
 @media (min-width: 1500px) {
