--- a/templates/react/containers/productPage/style.scss
+++ b/templates/react/containers/productPage/style.scss
@@ -1,6 +1,7 @@
 @import '../../../../public/styles/variables';
 
 .product-page {
+  padding-top:10px;
   .row {
 	margin: 0px;
 	.column {
@@ -61,6 +62,10 @@
 		.product-actions {
 		  .save-btn {
 			margin-left: 5px;
+			text-transform: uppercase;
+		  }
+		  .checkout-btn{
+			text-transform: uppercase;
 		  }
 		}
 		.share {
