--- a/templates/react/components/header/style.css
+++ b/templates/react/components/header/style.css
@@ -46,8 +46,7 @@
         .header .header-top .content .actions a {
           color: #000;
           font-size: 16px;
-          font-weight: bold;
-          margin-left: 10px; }
+          font-weight: bold; }
           .header .header-top .content .actions a .icon {
             margin-right: 5px; }
   .header .header-nav .nav-accent {
