--- a/templates/react/containers/productGroup/style.css
+++ b/templates/react/containers/productGroup/style.css
@@ -61,6 +61,34 @@
           padding-right: 10px; }
         .product-group .row .column .category-wise .products .container .card .card-body .product-image .image {
           height: 252px; }
+  .product-group.category-gadgets-and-grej .category-title {
+    background: linear-gradient(to bottom, #1569C7 0, #1569C7 100%);
+    color: #FFFFFF;
+    width: 200px;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 6px; }
+  .product-group.category-oplevelser .category-title {
+    background: linear-gradient(to bottom, #E8A317 0, #E8A317 100%);
+    color: #FFFFFF;
+    width: 150px;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 6px; }
+  .product-group.category-mad-and-drikke .category-title {
+    background: linear-gradient(to bottom, #347C17 0, #347C17 100%);
+    color: #FFFFFF;
+    width: 190px;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 6px; }
+  .product-group.category-ting-til-hjemmet .category-title {
+    background: linear-gradient(to bottom, #F70D1A 0, #F70D1A 100%);
+    color: #FFFFFF;
+    width: 220px;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 6px; }
 
 /* responsiveness */
 @media (min-width: 1500px) {
