--- a/templates/react/containers/card/style.scss
+++ b/templates/react/containers/card/style.scss
@@ -7,7 +7,7 @@
 	.product-title {
 	  margin-bottom: 2px;
 	  text-align: center;
-	  font-weight: 400;
+	  font-weight:bold;
 	  margin-top: 0;
 	  font-size: 18px;
 	  color: $link-grey-color;
