--- a/templates/react/containers/app/style.scss
+++ b/templates/react/containers/app/style.scss
@@ -59,7 +59,7 @@
   }
   .btn {
 	font-size: 16px;
-	font-weight: 400;
+	font-weight:bold;
 	text-shadow: 1px 1px rgba(0, 0, 0, 0.25);
 	padding: 5px 12px;
 	border-radius: 2px;
