--- a/templates/react/containers/productGroup/style.scss
+++ b/templates/react/containers/productGroup/style.scss
@@ -103,9 +103,9 @@
   }
   &.category-gadgets-and-grej{
 	.category-title{
-	  background: linear-gradient(to bottom, #1569C7 0, #1569C7 100%);
+	  background: linear-gradient(to bottom, #1569C7 0, #15317E 100%);
 	  color: #FFFFFF;
-	  width: 200px;
+	  width: 250px;
 	  margin: auto;
 	  margin-top: 50px;
 	  border-radius: 6px;
@@ -113,9 +113,9 @@
   }
   &.category-oplevelser{
 	.category-title{
-	  background: linear-gradient(to bottom, #E8A317 0, #E8A317 100%);
+	  background: linear-gradient(to bottom, #E8A317 0, #AF7817 100%);
 	  color: #FFFFFF;
-	  width: 150px;
+	  width: 200px;
 	  margin: auto;
 	  margin-top: 50px;
 	  border-radius: 6px;
@@ -123,9 +123,9 @@
   }
   &.category-mad-and-drikke{
 	.category-title{
-	  background: linear-gradient(to bottom, #347C17 0, #347C17 100%);
+	  background: linear-gradient(to bottom, #347C17 0, #254117 100%);
 	  color: #FFFFFF;
-	  width: 190px;
+	  width: 215px;
 	  margin: auto;
 	  margin-top: 50px;
 	  border-radius: 6px;
@@ -133,9 +133,9 @@
   }
   &.category-ting-til-hjemmet{
 	.category-title{
-	  background: linear-gradient(to bottom, #F70D1A 0, #F70D1A 100%);
+	  background: linear-gradient(to bottom, #F70D1A 0, #9F000F 100%);
 	  color: #FFFFFF;
-	  width: 220px;
+	  width: 260px;
 	  margin: auto;
 	  margin-top: 50px;
 	  border-radius: 6px;
