--- a/templates/react/components/header/style.scss
+++ b/templates/react/components/header/style.scss
@@ -50,6 +50,9 @@
 		  color: #000;
 		  font-size: 16px;
 		  font-weight: bold;
+		  &:hover {
+			color: #77b353;
+		  }
 		  .icon {
 			margin-right: 5px;
 		  }
@@ -158,7 +161,7 @@
 		  background: -webkit-linear-gradient(top, #8E35EF 0, #8E35EF 100%);
 		  background: -o-linear-gradient(top, #8E35EF 0, #8E35EF 100%);
 		  background: -ms-linear-gradient(top, #8E35EF 0, #8E35EF 100%);
-		  background: linear-gradient(to bottom, #8E35EF 0, #8E35EF 100%);
+		  background: linear-gradient(to bottom, #F88017 0, #A83000 100%);
 		  a {
 			&:hover {
 			  border-bottom: 4px solid #650aca;
@@ -172,7 +175,7 @@
 		  background: -webkit-linear-gradient(top, #1569C7 0, #1569C7 100%);
 		  background: -o-linear-gradient(top, #1569C7 0, #1569C7 100%);
 		  background: -ms-linear-gradient(top, #1569C7 0, #1569C7 100%);
-		  background: linear-gradient(to bottom, #1569C7 0, #1569C7 100%);
+		  background: linear-gradient(to bottom, #1569C7 0, #15317E 100%);
 		  a:hover {
 			border-bottom: 4px solid #0d4a8c;
 		  }
@@ -184,7 +187,7 @@
 		  background: -webkit-linear-gradient(top, #E8A317 0, #e9931a 100%);
 		  background: -o-linear-gradient(top, #E8A317 0, #E8A317 100%);
 		  background: -ms-linear-gradient(top, #E8A317 0, #E8A317 100%);
-		  background: linear-gradient(to bottom, #E8A317 0, #E8A317 100%);
+		  background: linear-gradient(to bottom, #E8A317 0, #AF7817 100%);
 		  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=0);
 		  a:hover {
 			border-bottom: 4px solid #af780b;
@@ -197,7 +200,7 @@
 		  background: -webkit-linear-gradient(top, #347C17 0, #347C17 100%);
 		  background: -o-linear-gradient(top, #347C17 0, #347C17 100%);
 		  background: -ms-linear-gradient(top, #347C17 0, #347C17 100%);
-		  background: linear-gradient(to bottom, #347C17 0, #347C17 100%);
+		  background: linear-gradient(to bottom, #347C17 0, #254117 100%);
 		  a:hover {
 			border-bottom: 4px solid #275f0f;
 		  }
@@ -209,7 +212,7 @@
 		  background: -webkit-linear-gradient(top, #F70D1A 0, #F70D1A 100%);
 		  background: -o-linear-gradient(top, #F70D1A 0, #F70D1A 100%);
 		  background: -ms-linear-gradient(top, #F70D1A 0, #F70D1A 100%);
-		  background: linear-gradient(to bottom, #F70D1A 0, #F70D1A 100%);
+		  background: linear-gradient(to bottom, #F70D1A 0, #9F000F 100%);
 		  a:hover {
 			border-bottom: 4px solid #b10610;
 		  }
