--- a/templates/react/components/user-wishlist/style.scss
+++ b/templates/react/components/user-wishlist/style.scss
@@ -6,11 +6,11 @@
 	overflow: hidden;
 	margin-bottom: 80px;
 	.title{
-	  font-size: 32px;
+	  font-size: 30px;
 	  text-align: center;
-	  background: linear-gradient(to bottom, #DC381F 0, #DC381F 100%);
+	  background: linear-gradient(to bottom, #E77471 0, #862000 100%);
 	  color: #FFFFFF;
-	  width: 200px;
+	  width: 250px;
 	  margin: auto;
 	  border-radius: 6px;
 	}
