--- a/templates/react/containers/card/style.scss
+++ b/templates/react/containers/card/style.scss
@@ -40,6 +40,7 @@
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
+		border: 1px solid #ccc;
 	  }
 	  &:hover {
 		.save-btn {
