--- a/templates/react/containers/productGroup/style.scss
+++ b/templates/react/containers/productGroup/style.scss
@@ -101,7 +101,7 @@
 	  }
 	}
   }
-  &.category-gadgets-and-grej{
+  &.category-gadgets-og-grej{
 	.category-title{
 	  background: linear-gradient(to bottom, #1569C7 0, #15317E 100%);
 	  color: #FFFFFF;
@@ -121,7 +121,7 @@
 	  border-radius: 6px;
 	}
   }
-  &.category-mad-and-drikke{
+  &.category-mad-og-drikke{
 	.category-title{
 	  background: linear-gradient(to bottom, #347C17 0, #254117 100%);
 	  color: #FFFFFF;
